Bug 468196 - dragging selected word displays all the line after selected word
Summary: dragging selected word displays all the line after selected word
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-06 08:45 UTC by skrachen
Modified: 2023-05-18 06:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description skrachen 2023-04-06 08:45:47 UTC
SUMMARY



STEPS TO REPRODUCE
1. open a text document with Kate, for example containing the line "one two three"
2. select a word in the middle of the line (in our example, select "two")
3. use the mouse to drag the selected word

OBSERVED RESULT
The text that follows the mouse when dragging should only be the selected word, but instead I have the whole end of the line that follows the mouse (in our example, "two three" follows the mouse when it should be only "two").

Dropping the text only copies the selected text ("two"), as it should be. I also observed this behavior in KWrite , but not in other applications.


EXPECTED RESULT
Only the selected text should follow the mouse ("two" in the example)


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 37
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Kernel Version: 6.2.9-200.fc37.x86_64 (64-bit)
Graphics Platform: Wayland
Graphics Processor: Mesa Intel® Graphics
Comment 1 Waqar Ahmed 2023-04-06 10:05:56 UTC
Can not reproduce with the mentioned steps
Comment 2 Christoph Cullmann 2023-04-07 14:56:34 UTC
Works for me, too, version 5.104.0, Wayland, too.
Comment 3 skrachen 2023-04-09 12:10:14 UTC
I reproduced it on another machine, but this time only the upper 1/3 of the letters in the "three" is displayed.
I tried to change the scaling to 100% (from 125%), it didn't change anything.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.7
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-69-generic (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5800H with Radeon Graphics
Comment 4 Waqar Ahmed 2023-04-09 18:23:46 UTC
Please share a video of what you are trying to do.
Comment 5 skrachen 2023-04-13 04:57:42 UTC
Here is a video showing the effect of the bug on the second machine (upper 1/3 of the "three" showing after "two"):

https://drive.google.com/file/d/1K-cLzAX_6uEnb8IE7IEOKNBe03uyKcZW/view
Comment 6 Bug Janitor Service 2023-04-28 03:46:10 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 7 Bug Janitor Service 2023-05-13 03:46:08 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 8 Waqar Ahmed 2023-05-17 13:10:08 UTC
Git commit 4e229eeaf655ea21c8c6f774291bc1ca560042f6 by Waqar Ahmed.
Committed on 17/05/2023 at 13:08.
Pushed by waqar into branch 'master'.

Fix incorrect lineHeight for drag pixmap

We can have custom line height so using fontMetrics is incorrect.

M  +1    -1    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/4e229eeaf655ea21c8c6f774291bc1ca560042f6
Comment 9 Waqar Ahmed 2023-05-18 06:17:43 UTC
Git commit d511aa80647fbce182cc113d4324558aab7450fe by Waqar Ahmed.
Committed on 18/05/2023 at 06:17.
Pushed by waqar into branch 'kf5'.

Fix incorrect lineHeight for drag pixmap

We can have custom line height so using fontMetrics is incorrect.
(cherry picked from commit 4e229eeaf655ea21c8c6f774291bc1ca560042f6)

M  +1    -1    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/d511aa80647fbce182cc113d4324558aab7450fe