Fix incorrect lineHeight for drag pixmap

We can have custom line height so using fontMetrics is incorrect.

BUG: 468196
(cherry picked from commit 4e229eeaf655ea21c8c6f774291bc1ca560042f6)